# PJ-PLATEAU_Award

./: .gitattributes  .gitignore  Dockerfile  PJ-PLATEAU_Award.sln  PushLFS.ps1  README.md  pyproject.toml  requirements.txt
LandingPage/: package-lock.json
MotionInputer-iOS/MotionInputer-iOS/: ContentView.swift  MotionInputer_iOSApp.swift
MotionInputer-iOS/MotionInputer-iOS.xcodeproj/: project.pbxproj
MotionInputer-iOS/MotionInputer-iOS/Components/: MotionDetector.swift  WebSocketManeger.swift
PLATEAU-Run/PLATEAU-Run Watch App/: ContentView.swift  PLATEAU_RunApp.swift
PLATEAU-Run/PLATEAU-Run.xcodeproj/: project.pbxproj
PLATEAU-run Client/: .gitignore
PLATEAU-run Client/Assets/: Client.cs  ClientTEST.cs  CloseMordal.prefab  CountDown.prefab  CourseCard.prefab  CourseSelect.prefab  DeviceInputManager.cs  DeviceInputManeger.cs  GameComps.prefab  GameManager.prefab  GameObserver.prefab  Goal.prefab  GoalMessage.prefab  GoalUI.prefab  LoadingUI.prefab  LoadingUIProg.prefab  Map.prefab  MiniMapCamera.prefab  New Material 1.mat  New Material.mat  PUN2Manager.cs  PUN2Service.prefab  PlayerAnimation.controller  PlayerArmature Variant.prefab  PlayerArmature.prefab  PlayerController.cs  PlayerScript.cs  PlayerUI.prefab  ProgressBar.prefab  Results.prefab  ServerManeger.cs  Sphere.prefab  Start.prefab  Street 3 Prefab (43) Variant.prefab  TimeValue 1.prefab  TimeValue.prefab
PLATEAU-run Client/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
StepPoster/StepPoster Watch App/: ContentView.swift  StepPosterApp.swift
StepPoster/StepPoster.xcodeproj/: project.pbxproj
TestAccount/: TESTUSER1.json  TESTUSER2.json
WebServer/: pyproject.toml  requirements.txt  server_config.json
WebServer/webserver/: main.py  requirements.txt
WebServer/webserver/Interfaces/: activity_interface.py  client_data_interface.py  client_types.py  server_config.py  utils.py
WebServer/webserver/modules/: ServerApp.py  device_motion_store.py  user_data_store.py
(+364 files in other folders)
