[tool.poetry]
name = "PLATEAU run WebServer"
version = "0.0.2"
description = ""
authors = ["SO 高林秀 <s.takabayashi@super-one.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
poethepoet = "^0.24.1"
websockets = "^12.0"
ipget = "^0.0.3"
public-ip = "^0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev.shell = "uvicorn webserver.main:app --reload"
start.shell = "uvicorn webserver.main:app --host=0.0.0.0"
